--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="css/about.css">
-    <script src="../javascript/script.js" defer></script>
+    <script src="javascript/script.js" defer></script>
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
     <section class="about-section">
         <div class="about-container">
             <div class="about-image">
-                <img src="../media/Pi7_Tool_IMG-20210419-WA0021.jpg" alt="Profile">
+                <img src="media/Pi7_Tool_IMG-20210419-WA0021.jpg" alt="Profile">
             </div>
             <div class="about-content">
                 <h1>Hi, I'm Andreas Surya Fernandez Marpaung</h1>
