--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link rel="stylesheet" href="css/contact.css">
-    <script src="../javascript/script.js" defer></script>
+    <script src="javascript/script.js" defer></script>
 </head>
 <body>
     <header>
